--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    max-width: fit-content;
 }
 
 body {
@@ -43,7 +44,7 @@ body {
         transform: translateY(0);
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
-    
+
     &:focus:not(:disabled) {
         outline: none;
         box-shadow: 0 0 0 3px rgba(106, 5, 114, 0.5);
@@ -123,14 +124,12 @@ h1.ai-overlord-title {
     position: relative;
     display: inline-block;
     padding: 10px;
-    background: linear-gradient(
-        130deg,
-        $dark-bg,
-        $purple,
-        $brown,
-        $pink-red,
-        $light-pink
-    );
+    background: linear-gradient(130deg,
+            $dark-bg,
+            $purple,
+            $brown,
+            $pink-red,
+            $light-pink );
     background-size: 150% 150%;
     background-clip: text;
     -webkit-background-clip: text;
@@ -242,6 +241,7 @@ h1.ai-overlord-title {
     align-items: flex-start;
     justify-content: space-between;
 }
+
 #stage-timer {
     font-size: 3em;
     font-family: 'Courier New', Courier, monospace;
@@ -600,7 +600,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     cursor: pointer;
     display: inline-block;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 0.98em;
     padding: 0 18px;
     line-height: 30px;
     text-align: center;
@@ -695,7 +695,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     width: 75%;
     margin-right: 20px;
     padding: 0.6em 2em;
-    border: none;
+    border: 3px solid white;
     outline: none;
     color: rgb(255, 255, 255);
     cursor: pointer;
@@ -710,18 +710,16 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 .major-upgrades:before {
     content: "";
-    background: linear-gradient(
-        45deg,
-        #ff0000,
-        #ff7300,
-        #fffb00,
-        #48ff00,
-        #00ffd5,
-        #002bff,
-        #7a00ff,
-        #ff00c8,
-        #ff0000
-    );
+    background: linear-gradient(45deg,
+            #ff0000,
+            #ff7300,
+            #fffb00,
+            #48ff00,
+            #00ffd5,
+            #002bff,
+            #7a00ff,
+            #ff00c8,
+            #ff0000);
     position: absolute;
     top: -2px;
     left: -2px;
@@ -895,28 +893,19 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 /* The Overlay (background) */
 .overlay {
     /* Height & width depends on how you want to reveal the overlay */
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 0;
     position: fixed;
     z-index: 16;
     left: 0;
     top: 0;
+    align-items: center;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.9);
     overflow-x: hidden;
     transition: 0.5s;
-}
-
-/* Position the content inside the overlay */
-.overlay-content {
-    display: inline-flex;
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-    justify-content: center;
-    align-items: center;
 }
 
 .overlay-content span {
@@ -1044,23 +1033,23 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     transition: 0.4s;
 }
 
-input:checked + .slider,
-input:checked + .small-slider {
+input:checked+.slider,
+input:checked+.small-slider {
     background: linear-gradient(90deg, #3859ec, #00eeff);
 }
 
-input:focus + .slider,
-input:focus + .small-slider {
+input:focus+.slider,
+input:focus+.small-slider {
     box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
 
-input:checked + .small-slider:before {
+input:checked+.small-slider:before {
     -webkit-transform: translateX(13px);
     -ms-transform: translateX(13px);
     transform: translateX(13px);
@@ -1084,14 +1073,12 @@ input:checked + .small-slider:before {
 
 /* Music Player Styling */
 .music-player-container {
-    background: linear-gradient(
-        135deg,
-        #0e0b16,
-        #6a0572,
-        #a1610d,
-        #ff2e63,
-        #ffaaaa
-    );
+    background: linear-gradient(135deg,
+            #0e0b16,
+            #6a0572,
+            #a1610d,
+            #ff2e63,
+            #ffaaaa);
     border: 2px solid #fff;
     border-radius: 15px;
     margin-top: 30px;
@@ -1102,7 +1089,7 @@ input:checked + .small-slider:before {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
+    width: 535px;
     transform: scale(0.85);
     transform-origin: center center;
 
@@ -1111,6 +1098,7 @@ input:checked + .small-slider:before {
         margin-top: -5px;
         margin-bottom: -10px;
     }
+
     #volumeLabel {
         font-family: 'Courier New', Courier, monospace;
         font-size: 16;
@@ -1264,16 +1252,14 @@ $crt-overscan-width: 2.66667em;
         right: 0;
         bottom: 0;
         z-index: -1;
-        background: linear-gradient(
-            135deg,
-            rgba(149, 149, 149, 0.5) 0%,
-            rgba(13, 13, 13, 0.55) 19%,
-            rgba(1, 1, 1, 0.64) 50%,
-            rgba(10, 10, 10, 0.69) 69%,
-            rgba(51, 51, 51, 0.73) 84%,
-            rgba(22, 22, 22, 0.76) 93%,
-            rgba(27, 27, 27, 0.78) 100%
-        );
+        background: linear-gradient(135deg,
+                rgba(149, 149, 149, 0.5) 0%,
+                rgba(13, 13, 13, 0.55) 19%,
+                rgba(1, 1, 1, 0.64) 50%,
+                rgba(10, 10, 10, 0.69) 69%,
+                rgba(51, 51, 51, 0.73) 84%,
+                rgba(22, 22, 22, 0.76) 93%,
+                rgba(27, 27, 27, 0.78) 100%);
         opacity: 0.5;
     }
 
@@ -1310,11 +1296,9 @@ $crt-overscan-width: 2.66667em;
         right: 0;
         box-shadow: inset 0 0 5px 5px rgba(255, 255, 255, 0.1);
         border-radius: $crt-border-radius;
-        background: radial-gradient(
-            ellipse at center,
-            rgba($phosphor-color, 0.1) 0%,
-            rgba(255, 255, 255, 0) 100%
-        );
+        background: radial-gradient(ellipse at center,
+                rgba($phosphor-color, 0.1) 0%,
+                rgba(255, 255, 255, 0) 100%);
         z-index: -4;
     }
 }
@@ -1395,6 +1379,7 @@ $table-text-color: #ffffff;
             &:nth-child(odd) {
                 background-color: $table-odd-row-bg;
             }
+
             &:nth-child(even) {
                 background-color: $table-even-row-bg;
             }
@@ -1422,20 +1407,26 @@ $table-text-color: #ffffff;
     }
 
     @media (max-width: 768px) {
-        th, td {
+
+        th,
+        td {
             padding: 8px 10px;
             font-size: 0.9em;
         }
     }
 
     @media (max-width: 480px) {
-        th, td {
+
+        th,
+        td {
             padding: 6px 8px;
             font-size: 0.8em;
         }
     }
 
-    tr, th, td {
+    tr,
+    th,
+    td {
         transition: background-color 0.3s ease, border-color 0.3s ease;
     }
 }
